# Gigamonkey

./: .gitmodules  BoostMinerDockerfile  CMakeLists.txt  conanfile.py  conanfile.txt  readme.md
.circleci/: config.yml
src/gigamonkey/: boost_miner.cpp
test/: CMakeLists.txt
test_package/: CMakeLists.txt  conan_integration_test.cpp  conanfile.py
